popup full screen layout problems fix

--- a/res/main.css
+++ b/res/main.css
@@ -110,7 +110,7 @@
 }
 
 #filterfield {
-    background-color: #FF0000FF;
+    background-color: #FFFFFFFF;
     width: 100%;
     height: 100%;
 }
